alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -70,31 +70,33 @@
   background-color: black !important;
 }
 
+.padding{
+  padding: 65px;
+}
+
 @media screen and (min-width:330px) and (max-width:600px) {
   .result-detailsbox-width{
-      width: 200px;
+      width: 190px;
   }
   .endscreen-container{
       width: 250px !important;
   }
   .padding{
-    padding-top: 0px !important;
+    padding: 50px !important;
   }
 
   .toast-message{
     width: auto;
   }
-}
 
-  @media screen and (max-width:600px) {
-    .box-width{
-        width: 350px;
-      }
-      .questions-section{
-        width: 250px;
-        margin-left: 0px !important;
-    }
-    .toast-message{
-      width: auto;
-    }
+  .box-width{
+    width: 350px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
   }
+  .questions-section{
+    width: 250px;
+    margin-left: 0px !important;
+}
+}
